--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "c4378aa6",
    "metadata": {},
    "outputs": [],
@@ -1749,11 +1749,11 @@
     "def insert_test() -> None:\n",
     "    print(\"Prueba de inserción de datos:\")\n",
     "    volumes: list = [7, 15, 30, 60] # Volúmenes de datos en días\n",
-    "    batch_sizes: list = [100, 300, 500, 1000]\n",
+    "    batch_sizes: list = [100, 200, 500, 1000]\n",
     "    columns = ['dias', 'postgres'] + [f'cassandra({size})' for size in batch_sizes]\n",
     "    results = pd.DataFrame(columns=columns)\n",
     "    for volume in volumes:\n",
-    "        data: list[tuple] = generate_data(sensors=15, days=volume)\n",
+    "        data: list[tuple] = generate_data(5, volume)\n",
     "        row = {'dias': volume}\n",
     "        row['postgres'] = insert_postgres(data)\n",
     "        for size in batch_sizes:\n",
@@ -1771,7 +1771,7 @@
     "Se hicieron pruebas con inserción individual en Cassandra con un volumen reducido de 5 sensores por 7 días y el tiempo fue demasiado por lo que descartó directamente, prefiriendose la inserción por batch.\n",
     "\n",
     "- Para PostgreSQL, el batch size es siempre el total de datos generados para cada volumen (toda la inserción se realiza en una sola llamada).\n",
-    "- Para Cassandra, se prueba cada tamaño de batch especificado (100, 300, 500, 1000).\n",
+    "- Para Cassandra, se prueba cada tamaño de batch especificado (100, 200, 500, 1000).\n",
     "- La tabla de resultados se presenta con una columna por cada método: una para PostgreSQL y una para cada batch size de Cassandra, agrupando por volumen de datos (días).\n",
     "\n",
     "Esto permite comparar fácilmente el impacto del tamaño de batch en Cassandra y la diferencia con PostgreSQL."
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "82b8fbcc",
    "metadata": {},
    "outputs": [
@@ -1791,21 +1791,91 @@
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[61]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m         results = pd.concat([results, pd.DataFrame([row])], ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     14\u001b[39m     display(results)\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[43minsert_test\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[61]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36minsert_test\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     10\u001b[39m     row[\u001b[33m'\u001b[39m\u001b[33mpostgres\u001b[39m\u001b[33m'\u001b[39m] = insert_postgres(data)\n\u001b[32m     11\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m size \u001b[38;5;129;01min\u001b[39;00m batch_sizes:\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m         row[\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mcassandra(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msize\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m)\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43minsert_cassandra\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m     results = pd.concat([results, pd.DataFrame([row])], ignore_index=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     14\u001b[39m display(results)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[60]\u001b[39m\u001b[32m, line 104\u001b[39m, in \u001b[36minsert_cassandra\u001b[39m\u001b[34m(data, batch_size)\u001b[39m\n\u001b[32m    102\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m rows[i:i + batch_size]:\n\u001b[32m    103\u001b[39m             batch.add(prepared, row)\n\u001b[32m--> \u001b[39m\u001b[32m104\u001b[39m         \u001b[43mcassandra\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    105\u001b[39m         batch.clear()\n\u001b[32m    106\u001b[39m end = time.time()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Jvnc\\Documents\\BD2\\BD2-Labs\\Lab15\\.conda\\Lib\\site-packages\\cassandra\\cluster.py:2677\u001b[39m, in \u001b[36mSession.execute\u001b[39m\u001b[34m(self, query, parameters, timeout, trace, custom_payload, execution_profile, paging_state, host, execute_as)\u001b[39m\n\u001b[32m   2634\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mexecute\u001b[39m(\u001b[38;5;28mself\u001b[39m, query, parameters=\u001b[38;5;28;01mNone\u001b[39;00m, timeout=_NOT_SET, trace=\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m   2635\u001b[39m             custom_payload=\u001b[38;5;28;01mNone\u001b[39;00m, execution_profile=EXEC_PROFILE_DEFAULT,\n\u001b[32m   2636\u001b[39m             paging_state=\u001b[38;5;28;01mNone\u001b[39;00m, host=\u001b[38;5;28;01mNone\u001b[39;00m, execute_as=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m   2637\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   2638\u001b[39m \u001b[33;03m    Execute the given query and synchronously wait for the response.\u001b[39;00m\n\u001b[32m   2639\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   2674\u001b[39m \u001b[33;03m    on a DSE cluster.\u001b[39;00m\n\u001b[32m   2675\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m2677\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mexecute_async\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrace\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcustom_payload\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexecution_profile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpaging_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhost\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexecute_as\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Jvnc\\Documents\\BD2\\BD2-Labs\\Lab15\\.conda\\Lib\\site-packages\\cassandra\\cluster.py:4952\u001b[39m, in \u001b[36mResponseFuture.result\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   4927\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mresult\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   4928\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   4929\u001b[39m \u001b[33;03m    Return the final result or raise an Exception if errors were\u001b[39;00m\n\u001b[32m   4930\u001b[39m \u001b[33;03m    encountered.  If the final result or error has not been set\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m   4950\u001b[39m \n\u001b[32m   4951\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m4952\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_event\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4953\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._final_result \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m _NOT_SET:\n\u001b[32m   4954\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m ResultSet(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28mself\u001b[39m._final_result)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Jvnc\\Documents\\BD2\\BD2-Labs\\Lab15\\.conda\\Lib\\threading.py:629\u001b[39m, in \u001b[36mEvent.wait\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m    627\u001b[39m signaled = \u001b[38;5;28mself\u001b[39m._flag\n\u001b[32m    628\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m signaled:\n\u001b[32m--> \u001b[39m\u001b[32m629\u001b[39m     signaled = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_cond\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    630\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m signaled\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Jvnc\\Documents\\BD2\\BD2-Labs\\Lab15\\.conda\\Lib\\threading.py:327\u001b[39m, in \u001b[36mCondition.wait\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m    325\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:    \u001b[38;5;66;03m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[32m    326\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m327\u001b[39m         \u001b[43mwaiter\u001b[49m\u001b[43m.\u001b[49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    328\u001b[39m         gotit = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    329\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dias</th>\n",
+       "      <th>postgres</th>\n",
+       "      <th>cassandra(100)</th>\n",
+       "      <th>cassandra(200)</th>\n",
+       "      <th>cassandra(500)</th>\n",
+       "      <th>cassandra(1000)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2.109822</td>\n",
+       "      <td>30.822227</td>\n",
+       "      <td>15.861103</td>\n",
+       "      <td>4.538761</td>\n",
+       "      <td>4.344583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15</td>\n",
+       "      <td>3.271147</td>\n",
+       "      <td>66.552932</td>\n",
+       "      <td>34.268575</td>\n",
+       "      <td>15.353234</td>\n",
+       "      <td>8.453861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30</td>\n",
+       "      <td>143.133282</td>\n",
+       "      <td>130.770741</td>\n",
+       "      <td>5650.858164</td>\n",
+       "      <td>30.523972</td>\n",
+       "      <td>17.589561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60</td>\n",
+       "      <td>13.444289</td>\n",
+       "      <td>999.740117</td>\n",
+       "      <td>509.043554</td>\n",
+       "      <td>61.017116</td>\n",
+       "      <td>36.388920</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  dias    postgres  cassandra(100)  cassandra(200)  cassandra(500)   \n",
+       "0    7    2.109822       30.822227       15.861103        4.538761  \\\n",
+       "1   15    3.271147       66.552932       34.268575       15.353234   \n",
+       "2   30  143.133282      130.770741     5650.858164       30.523972   \n",
+       "3   60   13.444289      999.740117      509.043554       61.017116   \n",
+       "\n",
+       "   cassandra(1000)  \n",
+       "0         4.344583  \n",
+       "1         8.453861  \n",
+       "2        17.589561  \n",
+       "3        36.388920  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
