--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "c4378aa6",
    "metadata": {},
    "outputs": [],
@@ -1768,21 +1768,32 @@
    "metadata": {},
    "source": [
     "### Pruebas de Escritura (INSERT)\n",
-    "Se hicieron pruebas con inserción individual en Cassandra con un volumen reducido de 5 sensores por 7 días y el tiempo fue demasiado por lo que descartó directamente, prefiriendose la inserción por batch.\n",
+    "Se realizaron pruebas preliminares de inserción individual en Cassandra utilizando un volumen reducido de 5 sensores durante 7 días. El tiempo requerido para completar la inserción fue excesivo, por lo que se descartó esta estrategia y se optó por evaluar únicamente la inserción por lotes (batch).\n",
     "\n",
-    "- Para PostgreSQL, el batch size es siempre el total de datos generados para cada volumen (toda la inserción se realiza en una sola llamada).\n",
-    "- Para Cassandra, se prueba cada tamaño de batch especificado (100, 200, 500, 1000).\n",
-    "- La tabla de resultados se presenta con una columna por cada método: una para PostgreSQL y una para cada batch size de Cassandra, agrupando por volumen de datos (días).\n",
+    "Para los experimentos se emplearon los siguientes parámetros:\n",
+    "- Sensores: 5\n",
+    "- Volúmenes de datos en días: 7, 15, 30, 60\n",
     "\n",
-    "Esto permite comparar fácilmente el impacto del tamaño de batch en Cassandra y la diferencia con PostgreSQL."
+    "En el caso de PostgreSQL, el tamaño del batch corresponde siempre al total de datos generados para cada volumen, es decir, toda la inserción se realiza en una sola operación masiva. Para Cassandra, se evaluaron diferentes tamaños de batch (100, 200, 500 y 1000) para analizar su impacto en el rendimiento.\n",
+    "\n",
+    "La tabla de resultados presenta una columna para PostgreSQL y una columna para cada tamaño de batch en Cassandra, agrupando los resultados por volumen de datos (días).\n",
+    "\n",
+    "Este enfoque permite comparar de manera clara el efecto del tamaño de batch en Cassandra y la diferencia de desempeño respecto a PostgreSQL."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "82b8fbcc",
+   "id": "fa273997",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prueba de inserción de datos:\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1880,6 +1891,153 @@
    ],
    "source": [
     "insert_test()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00914db6",
+   "metadata": {},
+   "source": [
+    "#### Propuesta de Optimización: Inserción Asíncrona y Concurrente\n",
+    "Para mejorar el rendimiendto en la inserción masiva de datos se propone el uso de *execute_async* que permite enviar múltiples lotes en paralelto y aprovechar mejor los recursos del clúster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2bb26d5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prueba de inserción de datos batch + async:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dias</th>\n",
+       "      <th>cassandra(2)</th>\n",
+       "      <th>cassandra(4)</th>\n",
+       "      <th>cassandra(8)</th>\n",
+       "      <th>cassandra(16)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.214091</td>\n",
+       "      <td>0.446585</td>\n",
+       "      <td>0.332718</td>\n",
+       "      <td>0.309937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>2.972985</td>\n",
+       "      <td>0.843920</td>\n",
+       "      <td>0.717132</td>\n",
+       "      <td>1.149184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>5.566646</td>\n",
+       "      <td>1.569872</td>\n",
+       "      <td>1.227481</td>\n",
+       "      <td>1.315997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>11.021844</td>\n",
+       "      <td>3.316874</td>\n",
+       "      <td>2.647669</td>\n",
+       "      <td>2.561033</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   dias  cassandra(2)  cassandra(4)  cassandra(8)  cassandra(16)\n",
+       "0   7.0      1.214091      0.446585      0.332718       0.309937\n",
+       "1  15.0      2.972985      0.843920      0.717132       1.149184\n",
+       "2  30.0      5.566646      1.569872      1.227481       1.315997\n",
+       "3  60.0     11.021844      3.316874      2.647669       2.561033"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def insert_cassandra_async(data: list[tuple], batch_size: int, max_workers: int) -> float:\n",
+    "    drop_table_cassandra()\n",
+    "    create_table_cassandra()\n",
+    "    partitioned = defaultdict(list)\n",
+    "    for row in data:\n",
+    "        partitioned[(row[0], row[1])].append(row)\n",
+    "    prepared = cassandra.prepare(\"\"\"\n",
+    "        INSERT INTO temperature_measurements (sensor_id, date, event_time, temperature, humidity)\n",
+    "        VALUES (?, ?, ?, ?, ?)\n",
+    "    \"\"\")\n",
+    "    batches: list[BatchStatement] = []\n",
+    "    for rows in partitioned.values():\n",
+    "        for i in range(0, len(rows), batch_size):\n",
+    "            batch = BatchStatement()\n",
+    "            for row in rows[i:i + batch_size]:\n",
+    "                batch.add(prepared, row)\n",
+    "            batches.append(batch)\n",
+    "    start = time.time()\n",
+    "    futures = []\n",
+    "    for batch in batches:\n",
+    "        futures.append(cassandra.execute_async(batch))\n",
+    "        if len(futures) >= max_workers:\n",
+    "            for future in futures:\n",
+    "                future.result()\n",
+    "            futures.clear()\n",
+    "    for future in futures:\n",
+    "        future.result()\n",
+    "    end = time.time()\n",
+    "    return end - start\n",
+    "\n",
+    "def insert_test_async() -> None:\n",
+    "    print(\"Prueba de inserción de datos batch + async:\")\n",
+    "    volumes: list[int] = [7, 15, 30, 60] # Volúmenes de datos en días\n",
+    "    workers_amounts: list[int] = [2, 4, 8, 16]   # Cantidad de workers para la inserción asíncrona\n",
+    "    columns = ['dias'] + [f'cassandra({workers})' for workers in workers_amounts]\n",
+    "    results = pd.DataFrame(columns=columns, dtype=float)\n",
+    "    for volume in volumes:\n",
+    "        data: list[tuple] = generate_data(5, volume)\n",
+    "        row = {'dias': float(volume)}\n",
+    "        for workers in workers_amounts:\n",
+    "            row[f'cassandra({workers})'] = insert_cassandra_async(data, 1000, workers)\n",
+    "        results = pd.concat([results, pd.DataFrame([row])], ignore_index=True)\n",
+    "    display(results)\n",
+    "\n",
+    "insert_test_async()"
    ]
   }
  ],
