--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2bb26d5d",
    "metadata": {},
    "outputs": [
@@ -2038,6 +2038,14 @@
     "    display(results)\n",
     "\n",
     "insert_test_async()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5fc62cf",
+   "metadata": {},
+   "source": [
+    "La tabla de datos muestra los resultados de tiempo en segundos agrupados por volumen de datos para Cassandra con distintas cantidad de workers simultáneos."
    ]
   }
  ],
