--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -1627,7 +1627,6 @@
    "id": "1c413f91",
    "metadata": {},
    "source": [
-    "\n",
     "### Conexión desde Jupyter Notebook"
    ]
   },
@@ -1767,7 +1766,7 @@
    "id": "740f9abb",
    "metadata": {},
    "source": [
-    "### Pruebas de Escritura (INSERT)\n",
+    "### a) Pruebas de Escritura (INSERT):\n",
     "Se realizaron pruebas preliminares de inserción individual en Cassandra utilizando un volumen reducido de 5 sensores durante 7 días. El tiempo requerido para completar la inserción fue excesivo, por lo que se descartó esta estrategia y se optó por evaluar únicamente la inserción por lotes (batch).\n",
     "\n",
     "Para los experimentos se emplearon los siguientes parámetros:\n",
@@ -2045,7 +2044,12 @@
    "id": "e5fc62cf",
    "metadata": {},
    "source": [
-    "La tabla de datos muestra los resultados de tiempo en segundos agrupados por volumen de datos para Cassandra con distintas cantidad de workers simultáneos."
+    "La tabla de datos muestra los resultados de tiempo en segundos agrupados por volumen de datos para Cassandra con distintas cantidad de workers simultáneos.\n",
+    "\n",
+    "### b) Pruebas de Lectura (SELECT):\n",
+    "- Consulta por sensor y rango temporal: Obtener datos de un sensor específico en un día\n",
+    "- Consulta agregada: Calcular temperatura promedio de la última hora para múltiples sensores\n",
+    "- Consulta de rango de valores: Encontrar lecturas anómalas (fuera de rango normal)"
    ]
   }
  ],
