--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "9a2388f1",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1466,7 @@
      "output_type": "stream",
      "text": [
       "Query 1: Lecturas del sensor SENS003 del día 2025-07-06:\n",
-      "Cassandra (0.0507 segundos):\n"
+      "Cassandra (0.0472 segundos):\n"
      ]
     },
     {
@@ -1499,32 +1499,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2025-07-06 23:59:00</td>\n",
-       "      <td>18.806134</td>\n",
-       "      <td>86.401322</td>\n",
+       "      <td>20.432070</td>\n",
+       "      <td>50.138416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2025-07-06 23:58:00</td>\n",
-       "      <td>25.007504</td>\n",
-       "      <td>37.339516</td>\n",
+       "      <td>36.385529</td>\n",
+       "      <td>65.201529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2025-07-06 23:57:00</td>\n",
-       "      <td>16.905875</td>\n",
-       "      <td>49.618386</td>\n",
+       "      <td>26.675042</td>\n",
+       "      <td>73.799254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2025-07-06 23:56:00</td>\n",
-       "      <td>29.797197</td>\n",
-       "      <td>77.201796</td>\n",
+       "      <td>20.527720</td>\n",
+       "      <td>53.530202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2025-07-06 23:55:00</td>\n",
-       "      <td>31.299464</td>\n",
-       "      <td>75.931630</td>\n",
+       "      <td>15.134275</td>\n",
+       "      <td>20.709181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1535,32 +1535,32 @@
        "    <tr>\n",
        "      <th>1435</th>\n",
        "      <td>2025-07-06 00:04:00</td>\n",
-       "      <td>14.885724</td>\n",
-       "      <td>87.427470</td>\n",
+       "      <td>32.254224</td>\n",
+       "      <td>38.521825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1436</th>\n",
        "      <td>2025-07-06 00:03:00</td>\n",
-       "      <td>30.369882</td>\n",
-       "      <td>22.005966</td>\n",
+       "      <td>38.323663</td>\n",
+       "      <td>72.440591</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1437</th>\n",
        "      <td>2025-07-06 00:02:00</td>\n",
-       "      <td>17.664961</td>\n",
-       "      <td>54.864776</td>\n",
+       "      <td>38.082472</td>\n",
+       "      <td>59.049028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1438</th>\n",
        "      <td>2025-07-06 00:01:00</td>\n",
-       "      <td>30.681108</td>\n",
-       "      <td>43.074342</td>\n",
+       "      <td>34.118799</td>\n",
+       "      <td>77.032230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1439</th>\n",
        "      <td>2025-07-06 00:00:00</td>\n",
-       "      <td>21.042819</td>\n",
-       "      <td>54.021583</td>\n",
+       "      <td>28.108846</td>\n",
+       "      <td>85.236772</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1569,17 +1569,17 @@
       ],
       "text/plain": [
        "              event_time  temperature   humidity\n",
-       "0    2025-07-06 23:59:00    18.806134  86.401322\n",
-       "1    2025-07-06 23:58:00    25.007504  37.339516\n",
-       "2    2025-07-06 23:57:00    16.905875  49.618386\n",
-       "3    2025-07-06 23:56:00    29.797197  77.201796\n",
-       "4    2025-07-06 23:55:00    31.299464  75.931630\n",
+       "0    2025-07-06 23:59:00    20.432070  50.138416\n",
+       "1    2025-07-06 23:58:00    36.385529  65.201529\n",
+       "2    2025-07-06 23:57:00    26.675042  73.799254\n",
+       "3    2025-07-06 23:56:00    20.527720  53.530202\n",
+       "4    2025-07-06 23:55:00    15.134275  20.709181\n",
        "...                  ...          ...        ...\n",
-       "1435 2025-07-06 00:04:00    14.885724  87.427470\n",
-       "1436 2025-07-06 00:03:00    30.369882  22.005966\n",
-       "1437 2025-07-06 00:02:00    17.664961  54.864776\n",
-       "1438 2025-07-06 00:01:00    30.681108  43.074342\n",
-       "1439 2025-07-06 00:00:00    21.042819  54.021583\n",
+       "1435 2025-07-06 00:04:00    32.254224  38.521825\n",
+       "1436 2025-07-06 00:03:00    38.323663  72.440591\n",
+       "1437 2025-07-06 00:02:00    38.082472  59.049028\n",
+       "1438 2025-07-06 00:01:00    34.118799  77.032230\n",
+       "1439 2025-07-06 00:00:00    28.108846  85.236772\n",
        "\n",
        "[1440 rows x 3 columns]"
       ]
@@ -1591,7 +1591,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PostgreSQL (0.0060 segundos):\n"
+      "PostgreSQL (0.0151 segundos):\n"
      ]
     },
     {
@@ -1624,32 +1624,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2025-07-06 23:59:00</td>\n",
-       "      <td>19.294152</td>\n",
-       "      <td>49.198654</td>\n",
+       "      <td>20.432070</td>\n",
+       "      <td>50.138416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2025-07-06 23:58:00</td>\n",
-       "      <td>31.928740</td>\n",
-       "      <td>87.587672</td>\n",
+       "      <td>36.385529</td>\n",
+       "      <td>65.201529</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2025-07-06 23:57:00</td>\n",
-       "      <td>26.699335</td>\n",
-       "      <td>51.608543</td>\n",
+       "      <td>26.675042</td>\n",
+       "      <td>73.799254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2025-07-06 23:56:00</td>\n",
-       "      <td>28.003156</td>\n",
-       "      <td>21.157938</td>\n",
+       "      <td>20.527720</td>\n",
+       "      <td>53.530202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2025-07-06 23:55:00</td>\n",
-       "      <td>12.916244</td>\n",
-       "      <td>57.648853</td>\n",
+       "      <td>15.134275</td>\n",
+       "      <td>20.709181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1660,32 +1660,32 @@
        "    <tr>\n",
        "      <th>1435</th>\n",
        "      <td>2025-07-06 00:04:00</td>\n",
-       "      <td>31.667686</td>\n",
-       "      <td>32.808141</td>\n",
+       "      <td>32.254224</td>\n",
+       "      <td>38.521825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1436</th>\n",
        "      <td>2025-07-06 00:03:00</td>\n",
-       "      <td>22.701466</td>\n",
-       "      <td>46.347124</td>\n",
+       "      <td>38.323663</td>\n",
+       "      <td>72.440591</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1437</th>\n",
        "      <td>2025-07-06 00:02:00</td>\n",
-       "      <td>30.496868</td>\n",
-       "      <td>54.882868</td>\n",
+       "      <td>38.082472</td>\n",
+       "      <td>59.049028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1438</th>\n",
        "      <td>2025-07-06 00:01:00</td>\n",
-       "      <td>19.706237</td>\n",
-       "      <td>49.527902</td>\n",
+       "      <td>34.118799</td>\n",
+       "      <td>77.032230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1439</th>\n",
        "      <td>2025-07-06 00:00:00</td>\n",
-       "      <td>13.292030</td>\n",
-       "      <td>46.093424</td>\n",
+       "      <td>28.108846</td>\n",
+       "      <td>85.236772</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1694,17 +1694,17 @@
       ],
       "text/plain": [
        "              event_time  temperature   humidity\n",
-       "0    2025-07-06 23:59:00    19.294152  49.198654\n",
-       "1    2025-07-06 23:58:00    31.928740  87.587672\n",
-       "2    2025-07-06 23:57:00    26.699335  51.608543\n",
-       "3    2025-07-06 23:56:00    28.003156  21.157938\n",
-       "4    2025-07-06 23:55:00    12.916244  57.648853\n",
+       "0    2025-07-06 23:59:00    20.432070  50.138416\n",
+       "1    2025-07-06 23:58:00    36.385529  65.201529\n",
+       "2    2025-07-06 23:57:00    26.675042  73.799254\n",
+       "3    2025-07-06 23:56:00    20.527720  53.530202\n",
+       "4    2025-07-06 23:55:00    15.134275  20.709181\n",
        "...                  ...          ...        ...\n",
-       "1435 2025-07-06 00:04:00    31.667686  32.808141\n",
-       "1436 2025-07-06 00:03:00    22.701466  46.347124\n",
-       "1437 2025-07-06 00:02:00    30.496868  54.882868\n",
-       "1438 2025-07-06 00:01:00    19.706237  49.527902\n",
-       "1439 2025-07-06 00:00:00    13.292030  46.093424\n",
+       "1435 2025-07-06 00:04:00    32.254224  38.521825\n",
+       "1436 2025-07-06 00:03:00    38.323663  72.440591\n",
+       "1437 2025-07-06 00:02:00    38.082472  59.049028\n",
+       "1438 2025-07-06 00:01:00    34.118799  77.032230\n",
+       "1439 2025-07-06 00:00:00    28.108846  85.236772\n",
        "\n",
        "[1440 rows x 3 columns]"
       ]
@@ -1748,6 +1748,206 @@
     "    display(pd.DataFrame(rows, columns=['event_time', 'temperature', 'humidity']))\n",
     "\n",
     "query_1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "aae09a91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query 2: Temperatura promedio de la última hora para múltiples sensores:\n",
+      "Cassandra (0.0836 segundos):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sensor_id</th>\n",
+       "      <th>avg_temp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SENS001</td>\n",
+       "      <td>25.445897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SENS002</td>\n",
+       "      <td>24.819644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SENS003</td>\n",
+       "      <td>24.599464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SENS004</td>\n",
+       "      <td>24.660667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SENS005</td>\n",
+       "      <td>25.968663</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sensor_id   avg_temp\n",
+       "0   SENS001  25.445897\n",
+       "1   SENS002  24.819644\n",
+       "2   SENS003  24.599464\n",
+       "3   SENS004  24.660667\n",
+       "4   SENS005  25.968663"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PostgreSQL (0.1271 segundos):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sensor_id</th>\n",
+       "      <th>avg_temp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SENS001</td>\n",
+       "      <td>25.445897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SENS002</td>\n",
+       "      <td>24.819644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SENS003</td>\n",
+       "      <td>24.599464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SENS004</td>\n",
+       "      <td>24.660667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SENS005</td>\n",
+       "      <td>25.968663</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sensor_id   avg_temp\n",
+       "0   SENS001  25.445897\n",
+       "1   SENS002  24.819644\n",
+       "2   SENS003  24.599464\n",
+       "3   SENS004  24.660667\n",
+       "4   SENS005  25.968663"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def query_2():\n",
+    "    print(\"Query 2: Temperatura promedio de la última hora para múltiples sensores:\")\n",
+    "    sensor_ids = [f'SENS{str(i).zfill(3)}' for i in range(1, 6)]\n",
+    "    date = datetime.now().strftime('%Y-%m-%d')\n",
+    "    hour = datetime.now() - timedelta(hours=1)\n",
+    "    results = pd.DataFrame(columns=['sensor_id', 'avg_temp'])\n",
+    "    prepared = cassandra.prepare(\"\"\"\n",
+    "        select temperature\n",
+    "        from temperature_measurements\n",
+    "        where sensor_id = ?\n",
+    "        and date = ?\n",
+    "        and event_time >= ?\n",
+    "    \"\"\")\n",
+    "    start = time.time()\n",
+    "    for sensor_id in sensor_ids:\n",
+    "        rows = list(cassandra.execute(prepared, (sensor_id, date, hour)))\n",
+    "        avg_temp = sum(row.temperature for row in rows) / len(rows) if rows else None\n",
+    "        row = {'sensor_id': sensor_id, 'avg_temp': avg_temp}\n",
+    "        results = pd.concat([results, pd.DataFrame([row])], ignore_index=True)\n",
+    "    end = time.time()\n",
+    "    cassandra_time = end - start\n",
+    "    print(f\"Cassandra ({cassandra_time:.4f} segundos):\")\n",
+    "    display(results)\n",
+    "\n",
+    "    query = \"\"\"\n",
+    "        select sensor_id, avg(temperature) as avg_temp\n",
+    "        from temperature_measurements\n",
+    "        where date = %s\n",
+    "        and event_time >= %s\n",
+    "        group by sensor_id\n",
+    "    \"\"\"\n",
+    "    start = time.time()\n",
+    "    postgres.execute(query, (date, hour))\n",
+    "    rows = postgres.fetchall()\n",
+    "    end = time.time()\n",
+    "    postgres_time = end - start\n",
+    "    print(f\"PostgreSQL ({postgres_time:.4f} segundos):\")\n",
+    "    display(pd.DataFrame(rows, columns=['sensor_id', 'avg_temp']))\n",
+    "\n",
+    "\n",
+    "query_2()"
    ]
   }
  ],
